--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,13 +7,13 @@ services:
       - "8080:80"
     volumes:
       - ./default.conf:/etc/nginx/conf.d/default.conf
-      - ???:/var/www/html
+      - ./src:/var/www/html
     depends_on:
       - php
   php:
     build: ./php
     volumes:
-      - ???:/var/www/html
+      - ./src:/var/www/html
     depends_on:
       - db
   db:
